--- a/server/package.json
+++ b/server/package.json
@@ -9,12 +9,18 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/express": "^4.17.13",
+    "@types/node": "^18.6.2",
+    "@types/validator": "^13.7.4",
     "nodemon": "^2.0.19",
     "ts-node": "^10.9.1"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.18.1",
     "mongoose": "^6.5.0",
-    "socket.io": "^4.5.1"
+    "socket.io": "^4.5.1",
+    "validator": "^13.7.0"
   }
 }
