--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^18.6.2",
     "@types/validator": "^13.7.4",
     "nodemon": "^2.0.19",
@@ -18,7 +19,9 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.0",
     "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.0",
     "socket.io": "^4.5.1",
     "validator": "^13.7.0"
